--- a/bio.html
+++ b/bio.html
@@ -1,3 +1,6 @@
+troyalfelt@gmail.com
+610-858-0966
+
 I was born in 1995 to my parents Anders and Peg. I grew up in Christiana, a
 small town. I attended the Octorara School District where I graduated with honors.
 I entered the world of work for five years after graduation, unsure what field
@@ -6,4 +9,4 @@ on Codeacademy and was immediately smitten. I decided to enroll in Thaddeus
 Stevens College of Technology as soon as possible. I am currently studying
 under the Compueter Science and Engineering Technology program. My interests
 include playing bass and playing too many video games. I live in an apartment
-with some roommates and an ill-behaved cat. 
+with some roommates and an ill-behaved cat.
