--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,9 @@
+<header>
 troyalfelt@gmail.com
 610-858-0966
+</header>
 
+<p>
 I was born in 1995 to my parents Anders and Peg. I grew up in Christiana, a
 small town. I attended the Octorara School District where I graduated with honors.
 I entered the world of work for five years after graduation, unsure what field
@@ -10,3 +13,4 @@ Stevens College of Technology as soon as possible. I am currently studying
 under the Compueter Science and Engineering Technology program. My interests
 include playing bass and playing too many video games. I live in an apartment
 with some roommates and an ill-behaved cat.
+</p>
