--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,7 @@ troyalfelt@gmail.com
 610-858-0966
 </header>
 
+<main>
 <p>
 I was born in 1995 to my parents Anders and Peg. I grew up in Christiana, a
 small town. I attended the Octorara School District where I graduated with honors.
@@ -14,3 +15,11 @@ under the Compueter Science and Engineering Technology program. My interests
 include playing bass and playing too many video games. I live in an apartment
 with some roommates and an ill-behaved cat.
 </p>
+</main>
+<aside>
+  <nav>
+    Home
+    Photo Album
+    Projects
+   </nav>
+</aside>
