--- a/bio.html
+++ b/bio.html
@@ -1,3 +1,12 @@
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <title>Troy's Biography Page</title>
+  </head>
+
+
+<body>
 <header>
 troyalfelt@gmail.com
 610-858-0966
@@ -23,3 +32,5 @@ with some roommates and an ill-behaved cat.
     Projects
    </nav>
 </aside>
+</body>
+</html>
