--- a/bio.html
+++ b/bio.html
@@ -3,15 +3,30 @@
     <meta charset="utf-8">
 
     <title>Troy's Biography Page</title>
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
+
   </head>
 
 
 <body>
 <header>
-troyalfelt@gmail.com
-610-858-0966
+  <address>
+    <a href="mailto:troyalfelt@gmail.com">troyalfelt@gmail.com</a>
+    <a href="tel:1-610-858-0966">610-858-0966</a>
+    <p>99 Cazillo Lane, Cotesville, PA 19320</p>
+  </address>
 </header>
 
+
+<div class="superdiv">
+  <aside>
+    <nav>
+      <a href="photos.html">Photo Album</a>
+      <a href="projects.html">Projects</a>
+      <a href="index.html">Home</a>
+     </nav>
+  </aside>
+<div class="subdiv">
 <main>
 <p>
 I was born in 1995 to my parents Anders and Peg. I grew up in Christiana, a
@@ -25,12 +40,7 @@ include playing bass and playing too many video games. I live in an apartment
 with some roommates and an ill-behaved cat.
 </p>
 </main>
-<aside>
-  <nav>
-    Home
-    Photo Album
-    Projects
-   </nav>
-</aside>
+</div>
+</div>
 </body>
 </html>
