--- a/bio.html
+++ b/bio.html
@@ -21,12 +21,15 @@
 <div class="superdiv">
   <aside>
     <nav>
-      <a href="photos.html">Photo Album</a>
-      <a href="projects.html">Projects</a>
       <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="photos.html">Photo Album</a>
+      <a href="#" class="disabled">Biography</a>
+
      </nav>
   </aside>
 <div class="subdiv">
+  <img src="https://placekitten.com/200/300"/>
 <main>
 <p>
 I was born in 1995 to my parents Anders and Peg. I grew up in Christiana, a
