--- a/bio.html
+++ b/bio.html
@@ -25,7 +25,7 @@
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="photos.html">Photo Album</a>
-      <a href="#" class="disabled">Biography</a>
+      <p class="disabled">Biography</p>
 
      </nav>
   </aside>
