--- a/bio.html
+++ b/bio.html
@@ -16,6 +16,7 @@
     <a href="tel:1-610-858-0966">610-858-0966</a>
     <p>99 Cazillo Lane, Cotesville, PA 19320</p>
   </address>
+  <h1>My Story</h1>
 </header>
 
 
@@ -32,7 +33,7 @@
 <div class="subdiv">
   <img src="https://placekitten.com/200/300"/>
 <main>
-<p>
+<p class="bigP">
 I was born in 1995 to my parents Anders and Peg. I grew up in Christiana, a
 small town. I attended the Octorara School District where I graduated with honors.
 I entered the world of work for five years after graduation, unsure what field
