--- a/bio.html
+++ b/bio.html
@@ -31,7 +31,7 @@
      </nav>
   </aside>
 <div class="subdiv">
-  <img src="https://placekitten.com/200/300"/>
+  <img class="bigPic" src="assets/photos/senior.jpeg"/>
 <main>
 <p class="bigP">
 I was born in 1995 to my parents Anders and Peg. I grew up in Christiana, a
@@ -47,5 +47,7 @@ with some roommates and an ill-behaved cat.
 </main>
 </div>
 </div>
+
+<script src="assets/main.js"></script>
 </body>
 </html>
