ran prettier to fix formatting

--- a/bio.html
+++ b/bio.html
@@ -51,7 +51,7 @@ with some roommates and an ill-behaved cat.
 </main>
 </div>
 </div>
-
+<footer></footer>
 <script src="assets/main.js"></script>
 </body>
 </html>
